--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <li><a href="/">Внутренняя ссылка</a></li>
         <li><a href="#top">Вернуться наверх</a></li>
         <li><a href="https://kubsu.ru/?faculty=fctipm&area=mo&group=22">Три параметра</a></li>
-        <li><a href="https://moodle.kubsu.ru/course/view.php?id=780">Разработка пользовательского Web-интерфейса</a></li>
+        <li><a href="https://moodle.kubsu.ru/course/view.php?id=780">Разработка пользовательского Web-интерфейса(ссылка с id)</a></li>
         <li><a href="./">Текущий каталог</a></li>
         <li><a href="about/">Каталог about</a></li>
         <li><a href="../">Каталог уровнем выше</a></li>
         <li><a href="../../">Каталог на 2 уровня выше</a></li>
-        <li><p>Чтобы узнать больше о поступлении посетите <a href="https://kubsu.ru">официальный сайт</a> КубГУ</p></li>
-        <li><a href="https://ru.wikipedia.org/wiki/Кубанский_государственный_университет#Факультеты">Факультеты КубГУ</a></li>
+        <li><p>Чтобы узнать больше о поступлении посетите <a href="https://kubsu.ru">официальный сайт</a> КубГУ(контекстная в абзаце)</p></li>
+        <li><a href="https://ru.wikipedia.org/wiki/Кубанский_государственный_университет#Факультеты">Факультеты КубГУ(фрагмент стороннего сайта)</a></li>
         <li>
             <img src="Kubsumap.png" usemap="#image-map" alt="Удобные ссылки КубГУ">
             <map name="image-map">
